--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
-  "name": "chill",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "slim",
-  "license": "MIT",
   "devDependencies": {
-    "vuepress": "^1.3.1"
+    "vitepress": "^0.13.0"
   },
   "scripts": {
-    "dev": "vuepress dev docs",
-    "build": "vuepress build docs",
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "serve": "vitepress serve docs",
     "deploy": "start deploy.sh"
   },
   "dependencies": {
-    "vuepress-theme-reco": "^1.2.2"
+    "globby": "^11.0.3",
+    "gray-matter": "^4.0.3",
+    "mz": "^2.7.0"
   }
 }
