移除多个文档，包括 API 示例、深拷贝、节流与防抖、Git 命令、Git 用户配置、JS 事件循环、JSX 与 Vue 示例及 Markdown 示例；更新 package.json 中的部署命令为 bun 运行脚本；修改首页配置，清空标题和导航链接。

--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
     "preview": "vitepress preview docs",
-    "deploy": "sh deploy.sh"
+    "deploy": "bun run deploy.sh"
   }
 }
