--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "vitepress": "^1.6.3"
   },
   "scripts": {
-    "dev": "vitepress dev docs",
+    "dev": "vitepress dev docs --open",
     "build": "vitepress build docs",
     "preview": "vitepress preview docs",
     "deploy": "bun run deploy.sh"
