--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "type": "module",
-  "dependencies": {},
+  "dependencies": {
+    "pagefind": "^1.3.0",
+    "vitepress-plugin-pagefind": "^0.4.13"
+  },
   "devDependencies": {
     "vitepress": "^1.6.3"
   },
